syntax = "proto3";

import "cavs/proto/op_def.proto";

message FuncDef {
  string name            = 1;
  repeated OpDef ops     = 2;
}
