syntax = "proto3";

import "cavs/proto/op_def.proto";

message FunctionDef {
  string name            = 1;
  repeated OpDef ops     = 2;
}
